--- a/index.html
+++ b/index.html
@@ -31,5 +31,13 @@
     </div>
   </div>
 </nav>
+
+<div class="container-fluid bg-1 text-center">
+  <h3 class="margin">Happy Birthday Imogen!</h3>
+  <img src="babyimogen.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Baby Imogen" width="350" height="350">
+  <h3>I hope you enjoy all that you see!</h3>
+</div>
+
+
 </body>
 </html>
