--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#services">SERVICES</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#pricing">PRICING</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#message">MESSAGE</a></li>
+        <li><a href="#gallery">GALLERY</a></li>
+        <li><a href="#places">PLACES</a></li>
       </ul>
     </div>
   </div>
@@ -38,6 +36,71 @@
   <h3>I hope you enjoy all that you see!</h3>
 </div>
 
+<div id="message" class="">
 
+</div>
+
+<div id="gallery" class="row">
+  <div class="col-sm-4">
+    <p class="text-center"><strong>Pic</strong></p><br>
+    <a href="#demo" data-toggle="collapse">
+      <img src="pic1.jpg" class="imd-circle person" alt="Click Me!">
+    </a>
+    <div id="demo" class="collapse">
+      <p>.................</p>
+      <p>.................</p>
+      <p>.................</p>
+    </div>
+  </div>
+  
+  <div class="col-sm-4">
+    <p class="text-center"><strong>Pic</strong></p><br>
+    <a href="#demo2" data-toggle="collapse">
+      <img src="pic2.jpg" class="imd-circle person" alt="Click Me!">
+    </a>
+    <div id="demo2" class="collapse">
+      <p>.................</p>
+      <p>.................</p>
+      <p>.................</p>
+    </div>
+  </div>
+
+  <div class="col-sm-4">
+    <p class="text-center"><strong>Pic</strong></p><br>
+    <a href="#demo3" data-toggle="collapse">
+      <img src="pic3.jpg" class="imd-circle person" alt="Click Me!">
+    </a>
+    <div id="demo3" class="collapse">
+      <p>.................</p>
+      <p>.................</p>
+      <p>.................</p>
+    </div>
+  </div>
+  
+</div>
+
+<div class="row text-center">
+  <div class="col-sm-4">
+    <div class="thumbnail">
+      <img src="edinburgh.jpg" alt="Paris">
+      <p><strong>Edinburgh</strong></p>
+      <p>21 October 2016</p>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="thumbnail">
+      <img src="amsterdam.jpg" alt="New York">
+      <p><strong>Amsterdam?</strong></p>
+      <p>2017?</p>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="thumbnail">
+      <img src="futuretrips.jpg" alt="San Francisco">
+      <p><strong>Hopefully many more</strong></p>
+      <p>2017+</p>
+    </div>
+  </div>
+</div>
 </body>
 </html>
