--- a/index.html
+++ b/index.html
@@ -9,7 +9,34 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <style type="text/css">
-    
+    #mypage {
+      margin-top: 50px;
+      background-color: #aaa;
+    }
+    #mypage img{
+      margin-top: 20px;
+    }
+    #message{
+      background-color: #333;
+    }
+    #gallery{
+      background-color: #aaa;
+      padding: 100px;
+    }
+    #places{
+      background-color: #333;
+      padding: 20px;
+    }
+    .person{
+      height: 250px;
+      width: 250px;
+    }
+    .glyphicon {
+      color: #fff;
+    }
+    @media (768px) {
+      
+    }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -43,13 +70,14 @@
 
   <div class="glyphicon glyphicon-heart">
   </div>
+
 </div>
 
 <div id="gallery" class="row">
   <div class="col-sm-4">
     <p class="text-center"><strong>Pic</strong></p><br>
     <a href="#demo" data-toggle="collapse">
-      <img src="pic1.jpg" class="imd-circle person" alt="Click Me!">
+      <img src="pic1.png" class="img-circle person" alt="Click Me!">
     </a>
     <div id="demo" class="collapse">
       <p>.................</p>
@@ -61,7 +89,7 @@
   <div class="col-sm-4">
     <p class="text-center"><strong>Pic</strong></p><br>
     <a href="#demo2" data-toggle="collapse">
-      <img src="pic2.jpg" class="imd-circle person" alt="Click Me!">
+      <img src="pic2.png" class="img-circle person" alt="Click Me!">
     </a>
     <div id="demo2" class="collapse">
       <p>.................</p>
@@ -73,7 +101,7 @@
   <div class="col-sm-4">
     <p class="text-center"><strong>Pic</strong></p><br>
     <a href="#demo3" data-toggle="collapse">
-      <img src="pic3.jpg" class="imd-circle person" alt="Click Me!">
+      <img src="pic3.png" class="img-circle person" alt="Click Me!">
     </a>
     <div id="demo3" class="collapse">
       <p>.................</p>
