--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
     .glyphicon {
       color: #fff;
     }
-    
+    @media only screen and (max-width: 320px){
+      #gallery{
+        padding:0;
+      }
+    }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
