--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     .glyphicon {
       color: #fff;
     }
-    @media only screen and (max-width: 320px){
+    @media only screen and (min-device-width : 375px) and (max-device-width : 667px) and (orientation : portrait) {
       #gallery{
-        padding:0;
+        padding: 0px;
       }
     }
   </style>
