--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       padding-top: 20px;
       padding-bottom: 20px;
     }
+    .col-sm-4{
+      padding-bottom: 20px;
+    }
     #places{
       background-color: #333;
       padding: 20px;
@@ -79,7 +82,7 @@
         <img src="pic2.png" class="img-circle person" alt="Click Me!">
       </a>
       <div id="demo" class="collapse">
-        <br><br>
+        <br>
         <p>You may be weird</p>
       </div>
     </div>
@@ -90,7 +93,7 @@
         <img src="pic1.jpg" class="img-circle person" alt="Click Me!">
       </a>
       <div id="demo2" class="collapse">
-        <br><br>
+        <br>
         <p>And a drunk</p>
       </div>
     </div>
@@ -101,7 +104,7 @@
         <img src="pic3.png" class="img-circle person" alt="Click Me!">
       </a>
       <div id="demo3" class="collapse">
-        <br><br>
+        <br>
         <p>And a baby</p>
         <p>But I still love you!</p>
       </div>
