--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#message">MESSAGE</a></li>
         <li><a href="#gallery">GALLERY</a></li>
-       
+        <li><a href="#places">PLACES</a></li>
       </ul>
     </div>
   </div>
