--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style type="text/css">
     #mypage {
       margin-top: 50px;
-      background-color: #aaa;
+      background-color: #ddd;
       padding-bottom: 15px;
     }
     #mypage img{
@@ -26,7 +26,7 @@
       padding-bottom: 15px;
     }
     #gallery{
-      background-color: #aaa;
+      background-color: #ddd;
       padding-top: 20px;
       padding-bottom: 20px;
     }
@@ -157,7 +157,7 @@
   </div>
 </div>
 
-<footer style="background-color: #aaa; padding: 4px;" class="container text-center">
+<footer style="background-color: #ddd; padding: 4px;" class="container text-center">
   <p>&copy;Damien Elliott 2017</p>
 </footer>
 </body>
