--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style type="text/css">
     #mypage {
       margin-top: 50px;
-      background-color: #ddd;
+      background-color: #aaa;
       padding-bottom: 15px;
     }
     #mypage img{
@@ -26,7 +26,7 @@
       padding-bottom: 15px;
     }
     #gallery{
-      background-color: #ddd;
+      background-color: #aaa;
       padding-top: 20px;
       padding-bottom: 20px;
     }
@@ -80,10 +80,11 @@
 <div id="message" class="container text-center">
 
   <p>Imogen, from the first day that I saw you I knew that you were the one for me. 
-    Everytime that I see your face it instanly makes my day better, from the moment that I wake
-    I can't wait for you to wake, just so we can talk again. I know that this isn't much but I wanted
+    Every time that I see your face it instantly makes my day better, from the moment that I wake
+    I can't wait for you to wake up, just so we can talk again. Being with you is what gives me purpose and I wouldn’t have it any other way. I know that this isn't much, and you probably want/deserve more, but I wanted
     to give you something with a more personal touch, something that I made just for you. I hope you have a 
-    great birthday and I hope that we have many more over to share.</p>
+    great birthday and I hope that we have many more over to share.
+</p>
     <br>
   <p>I love you,</p>
   <p>Damien</p>
@@ -157,7 +158,7 @@
   </div>
 </div>
 
-<footer style="background-color: #ddd; padding: 4px;" class="container text-center">
+<footer style="background-color: #aaa; padding: 4px;" class="container text-center">
   <p>&copy;Damien Elliott 2017</p>
 </footer>
 </body>
