--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="futuretrips.jpg" alt="Where next?">
+        <img src="iceland.jpg" alt="Where next?">
         <p style="font-size: 16px;"><strong>Hopefully many more</strong></p>
         <p>2017+</p>
       </div>
