--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </a>
       <div id="demo3" class="collapse">
         <br>
-        <p style="font-size: 24px;">And a baby</p>
+        <p style="font-size: 24px;">And act like a baby</p>
         <p style="font-size: 24px;">But I still love you!</p>
       </div>
     </div>
