--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="amsterdam.jpg" alt="Amsterdam">
-        <p style="font-size: 16px;"><strong>Amsterdam?</strong></p>
-        <p>2017?</p>
+        <p style="font-size: 16px;"><strong>Amsterdam</strong></p>
+        <p>25th April 2017</p>
       </div>
     </div>
     <div class="col-sm-4">
