--- a/index.html
+++ b/index.html
@@ -150,6 +150,20 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
+        <img src="alicante.jpg" alt="Alicante">
+        <p style="font-size: 16px;"><strong>Alicante</strong></p>
+        <p>2017+</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="lake.jpg" alt="Lake District">
+        <p style="font-size: 16px;"><strong>Lake District</strong></p>
+        <p>2017+</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
         <img src="iceland.jpg" alt="Where next?">
         <p style="font-size: 16px;"><strong>Hopefully many more</strong></p>
         <p>2017+</p>
