--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="thumbnail">
         <img src="iceland.jpg" alt="Where next?">
         <p style="font-size: 16px;"><strong>Hopefully many more</strong></p>
-        <p>2017+</p>
+        <p>tbd?</p>
       </div>
     </div>
   </div>
