--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
         <p>2017+</p>
       </div>
     </div>
+  </div>
+  <div id="places" class="row text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="lake.jpg" alt="Lake District">
