--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <div class="thumbnail">
         <img src="alicante.jpg" alt="Alicante">
         <p style="font-size: 16px;"><strong>Alicante</strong></p>
-        <p>2017+</p>
+        <p>15th July 2017</p>
       </div>
     </div>
   </div>
@@ -161,7 +161,7 @@
       <div class="thumbnail">
         <img src="lake.jpg" alt="Lake District">
         <p style="font-size: 16px;"><strong>Lake District</strong></p>
-        <p>2017+</p>
+        <p>13th November 2017</p>
       </div>
     </div>
     <div class="col-sm-4">
